--- a/index.html
+++ b/index.html
@@ -1,19 +1,17 @@
-<!DOCTYPE html>
+
+            border: 3px solid #000;<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FRLG Battle Sim (Airtight Puzzle Mode V2)</title>
-    
+
     <style>
-        body {
-            background-color: #333; 
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
+        html, body {
             margin: 0;
-            font-family: 'Courier New', monospace; 
+            padding: 0;
+            overflow: hidden;
+            background: transparent;
         }
 
         #battle-screen {
@@ -30,7 +28,6 @@
         .ui-box, .pokemon-info-box {
             position: absolute;
             background-color: #fff;
-            border: 3px solid #000;
             font-size: 16px;
             box-sizing: border-box;
         }
@@ -893,4 +890,5 @@
 </script>
 
 </body>
+
 </html>
