--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-
-            border: 3px solid #000;<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,8 +9,15 @@
         html, body {
             margin: 0;
             padding: 0;
-            overflow: hidden;
-            background: transparent;
+            height: 100%;
+        }
+
+        body {
+            background-color: #98F898; /* replaces the gray background */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
         }
 
         #battle-screen {
@@ -892,3 +898,4 @@
 </body>
 
 </html>
+
