--- a/index.html
+++ b/index.html
@@ -4,20 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FRLG Battle Sim (Airtight Puzzle Mode V2)</title>
-
+    
     <style>
-        html, body {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-        }
-
         body {
-            background-color: #98F898; /* replaces the gray background */
+            background-color: #333; 
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
+            margin: 0;
+            font-family: 'Courier New', monospace; 
         }
 
         #battle-screen {
@@ -34,6 +30,7 @@
         .ui-box, .pokemon-info-box {
             position: absolute;
             background-color: #fff;
+            border: 3px solid #000;
             font-size: 16px;
             box-sizing: border-box;
         }
@@ -896,6 +893,4 @@
 </script>
 
 </body>
-
 </html>
-
