--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
                      }, 2000);
                 }, 1000);
             } else {
-                displayMessage(`You defeated the<br>Dittomon Fangame Spec Demo! Think big!`); 
+                displayMessage(`You defeated the<br>Dittomon Fangame Spec Demo! You would now leave the fight with a Volt Absorb Squirtle! This is just one example! Think big!`); 
             }
         } else {
              displayMessage(`DITTOMON fainted!`);
@@ -916,3 +916,4 @@
 
 </body>
 </html>
+
